<resources>
    <string name="app_name">My Application</string>

    <string name="title_activity_main">Login</string>
    <string name="title_activity_service_order">Service Order</string>
    <string name="title_activity_service_order_list">List of Service Orders</string>

    <string name="msg_mandatory">Mandatory field.</string>
    <string name="msg_invalid_date">Invalid date.</string>
    <string name="msg_invalid_time">Invalid time.</string>
    <string name="msg_invalid_value">Invalid value.</string>

    <string name="lbl_user">User</string>
    <string name="lbl_pass">Password</string>
    <string name="lbl_btn_login">Sign In</string>
    <string name="lbl_service_orders">Service Orders</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_client_name">Client Name</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_value">Value</string>
    <string name="lbl_paid">Paid?</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_time">Time</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>

</resources>
