<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.administrador.myapplication.controllers.ServiceOrderActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/lbl_client_name"
        android:ems="10"
        android:id="@+id/editTextClientName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/lbl_address"
        android:ems="10"
        android:id="@+id/editTextAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:inputType="date"
        android:hint="@string/lbl_date"
        android:ems="10"
        android:id="@+id/editTextDate" />


    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:inputType="time"
        android:hint="@string/lbl_time"
        android:ems="10"
        android:id="@+id/editTextTime" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/lbl_value"
            android:ems="10"
            android:id="@+id/editTextValue" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_paid"
            android:id="@+id/switchPaid" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/lbl_description"
        android:lines="3"
        android:ems="10"
        android:id="@+id/editTextDescription" />
</LinearLayout>
